--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,25 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "migrate": "prisma migrate dev",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "prisma": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prisma": "^7.2.0"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
