--- a/backendFlask/requirements.txt
+++ b/backendFlask/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.1.2
-Flask-CORS==3.1.1
+Werkzeug==2.2.3
+SQLAlchemy==1.4.54
+Flask-CORS==6.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-JWT-Extended==4.3.1
 python-dotenv==0.19.2
